--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,34 @@
 {
+  "manifest_version": 3,
   "name": "YouTube\u2122 Comment Translate",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "Automatically translate YouTube comments using the Google-Translate API",
   "content_scripts": [
     {
-      "matches": ["*://*.youtube.com/*"],
+      "matches": [
+        "*://*.youtube.com/*"
+      ],
       "run_at": "document_end",
-      "js": ["inject.js"]
+      "js": [
+        "inject.js"
+      ]
     }
   ],
-  "permissions": ["storage"],
-  "options_ui": { "page": "options.html" },
-  "manifest_version": 3,
-  "content_security_policy": {},
-  "host_permissions": ["*://*.youtube.com/*"]
+  "permissions": [
+    "storage"
+  ],
+  "options_ui": {
+    "page": "options.html"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self';"
+  },
+  "host_permissions": [
+    "*://*.youtube.com/*"
+  ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "ytcommenttranslate@oasoobi.net"
+    }
+  }
 }
